<resources>
    <string name="app_name">HomeyCam</string>

    <string name="dialog_before_run_title">Permission needed</string>
    <string name="dialog_before_run_message">Please accept call permission!</string>
    <string name="dialog_positive_button">Got it</string>
    <string name="dialog_location_before_run_message">Please accept location permission!</string>
    <string name="dialog_camera">Please accept camera permission!</string>
    <string name="enable_permission">Please enable Permission</string>

    <!--Common Text-->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="call">Call</string>
    <string name="yes">Yes</string>

    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <string name="remove">Remove Attachment</string>

    <string name="submit">SUBMIT</string>

    <string name="message">Alert</string>
    <string name="update">Update</string>
    <string name="error_valid_message">Please fill all fields</string>
    <string name="title_activity_passenger_home">PassengerHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="get_start">GET STARTED</string>
    <string name="confrim_password">Confirm Password</string>
    <string name="close">Close</string>
    <string name="tap_to_add_a_new_homey">Tap + to add a new Homey</string>

    <string name="alert_wifi">Please connect to same Wi-Fi which will be used to connect to device</string>
    <string name="title_activity_dash_board">DashBoard</string>

    <string name="all">ALL</string>
    <string name="title_activity_live_video">LiveVideoActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="channel_name">BOUT_CHANEL</string>
    <string name="channel_description">bout base app</string>
    <string name="default_notification_channel_id">111</string>
    <string name="map_key">AIzaSyCVE1S5ujEkKTBWlz6inD9TLo_vpxJjLuo</string>
    <string name="register_and_control_users_of_the_su_kam">Register and control Users of the Su-Kam</string>
    <string name="device_screen">Add,Delete and Manage Su-Kam connected to you profile</string>
</resources>
