<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_marginStart="@dimen/large_margin"
    android:layout_marginEnd="@dimen/large_margin"
    android:background="@drawable/wifi_bg"
    android:padding="@dimen/large_margin"
    android:gravity="center|bottom"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:orientation="vertical"
        android:padding="@dimen/large_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/small_margin"
            android:padding="@dimen/small_margin"
            android:text="@string/message"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/large_margin"
            android:gravity="center"
            android:text="@string/alert_wifi"
            android:textSize="@dimen/text_size_12" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/holo_blue_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/submit_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ok"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>
